Fixed the mis-aligning of a square (after clicked on), by replacing <button> with table elements (<td> and <tr>)

--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,8 @@
 
 .board {
   margin: 25px;
-  display: flex;
-  flex-direction: column;
-}
-
-.board-row:after {
-  display: flex;
-  /* clear: both; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .square {
@@ -29,6 +24,8 @@
   width: 50px;
   margin-right: 1px;
   margin-top: 1px;
+  font-size: 24px;
+  vertical-align: middle;
 }
 
 .square:focus {
